# math_py

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
Math_py/: __init__.py  math_py.py
math_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
