[metadata]
name = math_py
version = 0.1.0
author = Christopher Amadra Titus
author_email = groc.coders.schools@gmail.com
description = A simple math calculator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/groccoders/math_py
classifiers =
    Programming Language:: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True